--- a/module_personal/src/main/res/layout/activity_post_house.xml
+++ b/module_personal/src/main/res/layout/activity_post_house.xml
@@ -169,7 +169,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="出租方式"
+                    android:text="类型"
                     android:textColor="@color/public_order_normal_text_color"
                     android:textSize="8pt"/>
 
