--- a/CommonRes/src/main/res/drawable/public_button_common_selector.xml
+++ b/CommonRes/src/main/res/drawable/public_button_common_selector.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_enabled="false">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+            <!--创建页面的      账号，密码，验证码的背景-->
+
+            <!-- 填充的颜色 -->
+            <solid android:color="#60d397"/>
+            <!-- 设置按钮的四个角为弧形 -->
+            <!-- android:radius 弧形的半径 -->
+            <corners android:radius="10dp"/>
+
+        </shape>
+    </item>
+
+
     <item android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
