--- a/module_personal/src/main/res/layout/house_list_item.xml
+++ b/module_personal/src/main/res/layout/house_list_item.xml
@@ -75,12 +75,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1780"
-                        android:textColor="@color/public_money_color"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="/日"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:textColor="@color/public_money_color"/>
 
             </LinearLayout>
