--- a/module_order/src/main/res/layout/order_history_order_item.xml
+++ b/module_order/src/main/res/layout/order_history_order_item.xml
@@ -38,6 +38,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="3dp"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:layout_toRightOf="@id/order_num_tv"
                         android:text="MM2134862"
                         android:textSize="14sp"/>
@@ -172,6 +174,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1套/共1晚"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:textSize="16sp"/>
             </LinearLayout>
 
