--- a/module_order/src/main/res/layout/order_un_comment_item.xml
+++ b/module_order/src/main/res/layout/order_un_comment_item.xml
@@ -34,6 +34,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="3dp"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:text="万达广场金帆精品酒店式公寓"
                         android:textColor="#403d3d"
                         android:textSize="16sp"/>
