--- a/module_order/src/main/res/layout/order_un_confirm_item.xml
+++ b/module_order/src/main/res/layout/order_un_confirm_item.xml
@@ -107,6 +107,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:text="万达广场金帆精品酒店式公寓"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:textColor="#403d3d"
                     android:textSize="16sp"/>
 
@@ -177,6 +179,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1套/共1晚"
+                        android:lines="1"
+                        android:ellipsize="end"
                         android:textSize="16sp"/>
             </LinearLayout>
 
