--- a/module_personal/src/main/res/layout/integral_record_list_item.xml
+++ b/module_personal/src/main/res/layout/integral_record_list_item.xml
@@ -43,22 +43,26 @@
                     android:layout_weight="1"></LinearLayout>
 
                 <TextView
+                        android:id="@+id/home_name_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="英式小别墅"
+                        android:lines="1"
+                        android:ellipsize="end"
+                        android:textColor="#807f80"
+                        android:textSize="14sp"/>
+
+                <TextView
                     android:id="@+id/home_address_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="香港浅水湾"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:textColor="#807f80"
                     android:textSize="11sp"/>
-
-                <TextView
-                    android:id="@+id/home_name_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="英式小别墅"
-                    android:textColor="#807f80"
-                    android:textSize="14sp"/>
 
 
             </LinearLayout>
