--- a/module_personal/src/main/res/layout/activity_register.xml
+++ b/module_personal/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:joker="http://schemas.android.com/apk/res-auto"
-    android:background="#aabdfc"
+    android:background="@color/public_login_bg"
     android:orientation="vertical"
     tools:ignore="ResourceName">
 
