--- a/module_personal/src/main/res/layout/fragment_personal.xml
+++ b/module_personal/src/main/res/layout/fragment_personal.xml
@@ -31,7 +31,7 @@
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/user_login_bg"
+                android:background="@mipmap/login_bg"
                 android:orientation="vertical">
 
             <ImageView
