--- a/CommonRes/src/main/res/layout/public_common_toolbar.xml
+++ b/CommonRes/src/main/res/layout/public_common_toolbar.xml
@@ -11,9 +11,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/public_10_0dp"
             android:gravity="center"
-            android:padding="@dimen/public_10_0dp"
+            android:paddingTop="@dimen/public_10_0dp"
+            android:paddingBottom="@dimen/public_10_0dp"
+            android:paddingLeft="@dimen/public_5_0dp"
+            android:paddingRight="@dimen/public_5_0dp"
             app:srcCompat="@mipmap/left_arrow1"
             android:text="设置"
             android:textColor="@color/public_white"
