--- a/module_home/src/main/res/drawable/price_chose_text_selector.xml
+++ b/module_home/src/main/res/drawable/price_chose_text_selector.xml
@@ -3,5 +3,5 @@
     <item android:color="@color/white" android:state_pressed="true"></item>
     <item android:color="@color/white" android:state_selected="true"></item>
     <item android:color="@color/white" android:state_checked="true"></item>
-    <item android:color="#7D63E8"></item>
+    <item android:color="@color/public_colorAccent"></item>
 </selector>
