--- a/module_order/src/main/res/layout/fragment_order.xml
+++ b/module_order/src/main/res/layout/fragment_order.xml
@@ -15,14 +15,19 @@
 
     <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
-            joker:tabIndicatorHeight="@dimen/public_3_0dp"
-            joker:tabIndicatorColor="@color/public_tab_text_selected"
-            joker:tabSelectedTextColor="@color/public_tab_text_selected"
-            joker:tabTextColor="@color/public_white"
-            android:background="@color/public_search_selected"
+            joker:tabIndicatorHeight="@dimen/public_2_0dp"
+            joker:tabIndicatorColor="@color/public_search_selected"
+            joker:tabSelectedTextColor="@color/public_search_selected"
+            joker:tabTextColor="@color/public_black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
     </android.support.design.widget.TabLayout>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/public_1_0dp"
+            android:background="@color/public_gray">
+    </View>
 
     <android.support.v4.view.ViewPager
             android:id="@+id/view_pager"
