--- a/CommonRes/src/main/res/layout/public_pop_up_window.xml
+++ b/CommonRes/src/main/res/layout/public_pop_up_window.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#49e1ba"
+            android:background="@color/public_colorAccent"
             android:orientation="horizontal">
 
             <TextView
@@ -29,7 +29,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="什么是积分"
-                android:textColor="#185748"
+                android:textColor="@color/public_black"
                 android:textSize="15sp"/>
 
 
