--- a/module_message/src/main/res/layout/message_item_layout.xml
+++ b/module_message/src/main/res/layout/message_item_layout.xml
@@ -35,6 +35,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="23dp"
                         android:text="优惠促销"
+                        android:ellipsize="end"
+                        android:lines="1"
                         android:textColor="#343434"
                         android:textSize="16sp"/>
 
@@ -68,6 +70,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:ellipsize="end"
+                    android:lines="1"
                     android:text="双十一有重大优惠，敬请关注"
                     android:textColor="#cccccc"
                     android:textSize="13sp"/>
