--- a/module_personal/src/main/res/drawable/customer_service_card_shape.xml
+++ b/module_personal/src/main/res/drawable/customer_service_card_shape.xml
@@ -3,7 +3,7 @@
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:ignore="ResourceName">
     <!-- 填充的颜色 -->
-    <solid android:color="#b9aef1"/>
+    <solid android:color="@color/public_login_bg"/>
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="7dp"/>
