--- a/module_personal/src/main/res/layout/activity_about_us.xml
+++ b/module_personal/src/main/res/layout/activity_about_us.xml
@@ -15,11 +15,37 @@
     </com.example.commonres.view.CommonToolBar>
 
 
-    <ImageView
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@mipmap/about_us1"/>
+            android:background="@color/public_colorAccent">
+
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@mipmap/login_bg"
+                android:gravity="center"
+                android:orientation="vertical">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/login_sharehotel"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+
+    </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
