--- a/module_personal/src/main/res/layout/activity_modify_password.xml
+++ b/module_personal/src/main/res/layout/activity_modify_password.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
               xmlns:joker="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              android:background="#aabdfc"
+              android:background="@color/public_login_bg"
               tools:ignore="ResourceName">
 
     <com.example.commonres.view.CommonToolBar
