--- a/module_personal/src/main/res/layout/activity_login.xml
+++ b/module_personal/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="@color/public_login_bg"
+              android:background="#aabdfc"
               android:id="@+id/login_layout"
               tools:ignore="ResourceName">
 
