--- a/module_personal/src/main/res/layout/collection_list_item.xml
+++ b/module_personal/src/main/res/layout/collection_list_item.xml
@@ -169,8 +169,12 @@
             </LinearLayout>
 
         </LinearLayout>
-
-
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/public_1_0dp"
+        android:background="@color/public_gray">
+    </View>
 
 </LinearLayout>
